--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-21.png" alt="">
+              <img  src="img/icon-21.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Search Engine Optimization</h3>
