--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
         <nav   id="mynav" class="navbar navbar-expand-lg py-3 navbar-light bg-light bg-white bg-white.scrolled" ">
           <div  class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -221,7 +221,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="img/icon-21.png" alt="">
+              <img  src="/img/icon-21.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Search Engine Optimization</h3>
