--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
         <nav   id="mynav" class="navbar navbar-expand-lg py-3 navbar-light bg-light bg-white bg-white.scrolled" ">
           <div  class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
