--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/stayle.css">
+    <link rel="stylesheet" href="css/stayle.css">
     <body>
     <!-- nav bar start -->
     <div  class="fixed-top navbar-light bg-light bg-white bg-white.scrolled">
@@ -146,7 +146,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-17.png" alt="">
+              <img  src="img/icon-17.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Digital Marketing</h3>
@@ -165,7 +165,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-18.png" alt="">
+              <img  src="img/icon-18.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Website Development</h3>
