--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a class="btn main-btn" href="">Read More</a>
           </div>
           <div class="col-lg-6 ">
-            <img src="/img/img-three.png" alt="">
+            <img src="img/img-three.png" alt="">
           </div>
         </div>
   
@@ -88,14 +88,14 @@
       
 
       <div class="row ">
-        <div class="col-1 img"><img src="/img/icon-14.png" alt=""></div>
+        <div class="col-1 img"><img src="img/icon-14.png" alt=""></div>
         <div class="col-3">
           
           <h3>  Creative Strategy</h3>
           <p class="mt-4 pe-4">Sed do eiusmod tempor incidiunt ation ullamco laboris nisi ut aloniq uip ex ea com consequat.</p>
         </div>
 
-        <div class="col-1 img"><img src="/img/icon-15.png" alt=""></div>
+        <div class="col-1 img"><img src="img/icon-15.png" alt=""></div>
 
         <div class="col-3">
           <h3>Digital Solution</h3>
@@ -103,7 +103,7 @@
 
         </div>
 
-        <div class="col-1 img"><img src="/img/icon-16.png" alt=""></div>
+        <div class="col-1 img"><img src="img/icon-16.png" alt=""></div>
 
         <div class="col-3">
           <h3>Analysis & Report</h3>
@@ -118,10 +118,10 @@
     <div class="container py-5 my-5">
       <div class="row">
       <div class="col-lg-8">
-        <img class="img-fluid" src="/img/about-3-1.png" alt="">
+        <img class="img-fluid" src="img/about-3-1.png" alt="">
       </div>
       <div class="col-lg-4">
-        <img class="img-fluid" src="/img/about-3-2.png" alt="">
+        <img class="img-fluid" src="img/about-3-2.png" alt="">
 
       </div>
 
@@ -184,7 +184,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-19.png" alt="">
+              <img  src="img/icon-19.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Search Engine Optimization</h3>
@@ -203,7 +203,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-20.png" alt="">
+              <img  src="img/icon-20.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Cloud <br> Hosting</h3>
@@ -222,7 +222,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-21.png" alt="">
+              <img  src="img/icon-21.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Search Engine Optimization</h3>
@@ -241,7 +241,7 @@
         <div class="mycard p-5">
           <div class="row my-2">
             <div class="col-lg-4">
-              <img  src="/img/icon-22.png" alt="">
+              <img  src="img/icon-22.png" alt="">
             </div>
             <div class="col-lg-8 my-2">
               <h3 >Cloud <br> Hosting</h3>
