--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
     <!-- nav bar start -->
     <div  class="fixed-top navbar-light bg-light bg-white bg-white.scrolled">
-      <div  class="container  ">
+      <div   class=" ">
       
         <nav   id="mynav" class="navbar navbar-expand-lg py-3 navbar-light bg-light bg-white bg-white.scrolled" ">
           <div  class="container-fluid">
@@ -265,7 +265,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script>
       $(window).scroll(function(){
-        $('#mynav').toggleClass('scrolled', $(this).scrollTop() > 500);
+        $('#mynav').toggleClass('scrolled', $(this).scrollTop() > 300);
       });
     </script>
   </body>
